# spur

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  codecov.yml  deny.toml  install.sh  release-please-config.json
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: ci.yml  cleanup-images.yml  e2e.yml  nightly.yml  pr-lint.yml  release-please.yml  release.yml  set-e2e-pending.yml
crates/spur-cli/: Cargo.toml
crates/spur-cli/src/: env_defaults.rs  exec.rs  format_engine.rs  image.rs  interactive.rs  k8s.rs  main.rs  net.rs  node.rs  sacct.rs  sacctmgr.rs  salloc.rs  sattach.rs  sbatch.rs  scancel.rs  scontrol.rs  scrontab.rs  sdiag.rs  sinfo.rs  smd.rs  sprio.rs  squeue.rs  sreport.rs  srun.rs  sshare.rs  sstat.rs  strigger.rs  token.rs
crates/spur-client/: Cargo.toml
crates/spur-client/src/: lib.rs
crates/spur-core/: Cargo.toml  build.rs
crates/spur-core/src/: account_limits.rs  accounting.rs  admission.rs  array.rs  auth.rs  config.rs  dependency.rs  gpu_request.rs  hooks.rs  hostlist.rs  job.rs  k0s.rs  lib.rs  node.rs  partition.rs  process.rs  qos.rs  reservation.rs  resource.rs  spur_env.rs  step.rs  task_launch.rs  topology.rs  version.rs  wal.rs
crates/spur-core/src/assets/: local-path-provisioner.yaml
crates/spur-devices/: Cargo.toml
crates/spur-devices/src/: inject.rs  lib.rs  types.rs
crates/spur-devices/src/cdi/: annotations.rs  cache.rs  discovery.rs  mod.rs  spec.rs
crates/spur-devices/src/gres/: cache.rs  entry.rs  mod.rs
crates/spur-devices/src/registry/: device_registry.rs  entry.rs  mod.rs
crates/spur-ffi/: Cargo.toml
crates/spur-ffi/src/: lib.rs  types.rs
crates/spur-k8s/: Cargo.toml
crates/spur-k8s/src/: agent.rs  crd.rs  health.rs  heartbeat.rs  job_controller.rs  lib.rs  main.rs  node_watcher.rs
crates/spur-metrics/: Cargo.toml
crates/spur-metrics/src/: job.rs  node.rs
crates/spur-metrics/src/export/: jobs.rs  (+1 more)
crates/spur-metrics/tests/: job_export_golden.rs  node_export_golden.rs
crates/spur-net/: Cargo.toml
crates/spur-net/src/: address.rs  detect.rs  lib.rs  mesh.rs  oci.rs  wireguard.rs
crates/spur-proto/: Cargo.toml  build.rs
crates/spur-proto/src/: lib.rs
crates/spur-sched/: Cargo.toml
crates/spur-sched/src/: backfill.rs  cons_tres.rs  lib.rs  node_match.rs  priority.rs  timeline.rs  traits.rs
crates/spur-spank/: Cargo.toml
crates/spur-spank/src/: lib.rs
crates/spur-state/: Cargo.toml
crates/spur-state/src/: lib.rs  snapshot.rs  wal_store.rs
crates/spur-tests/: Cargo.toml  README.md
crates/spur-tests/src/: harness.rs  lib.rs  t01_run.rs  t05_queue.rs  t06_cancel.rs  t07_sched.rs  t17_submit.rs  t21_acctmgr.rs  t24_priority.rs  t28_arrays.rs  t28b_array_expand.rs  t39_gpu.rs  t50_core.rs  t51_hostlist.rs  t52_config.rs  t53_state.rs  t55_format.rs  t56_deps.rs  t57_auth.rs  t58_spank.rs
crates/spur-tests/src/bare_metal/: config.rs  fixture.rs  mod.rs  ssh.rs
crates/spur-tests/src/bare_metal/gpu/: mod.rs  multi_node.rs  single_node.rs
crates/spur-tests/src/bare_metal/multi_node/: container.rs  dispatch.rs  mod.rs  scheduling.rs
crates/spur-tests/src/bare_metal/single_node/: container.rs  jobs.rs  lifecycle.rs  mod.rs
crates/spur-tests/src/k8s/: fixture.rs  mod.rs
crates/spur-tests/src/k8s/multi_node/: lifecycle.rs  mod.rs
crates/spur-tests/src/k8s/single_node/: cross_namespace.rs  mod.rs  spurjob.rs
crates/spur-tests/src/native_host/: config.rs  fixture.rs  mod.rs
crates/spur-tests/src/native_host/gpu/: mod.rs  multi_node.rs  single_node.rs
crates/spur-tests/src/native_host/multi_node/: container.rs  dispatch.rs  mod.rs  scheduling.rs
crates/spur-tests/src/native_host/single_node/: container.rs  jobs.rs  lifecycle.rs  mod.rs
crates/spur-update/: Cargo.toml
crates/spur-update/src/: cache.rs  check.rs  download.rs  install.rs  k0s.rs  lib.rs
crates/spurctld/: Cargo.toml
crates/spurctld/src/: accounting.rs  association_cache.rs  cluster.rs  cluster_k8s.rs  fairshare_cache.rs  leader_election.rs  limits_cache.rs  main.rs  metrics_server.rs  raft.rs  raft_server.rs  rpc_middleware.rs  scheduler_loop.rs  server.rs
crates/spurctld/src/accounting/: db.rs  grpc.rs  mod.rs  notifier.rs  reconcile.rs
crates/spurctld/src/rest/: convert.rs  handlers.rs  mod.rs  types.rs
crates/spurd/: Cargo.toml
crates/spurd/src/: agent_server.rs  cluster.rs  container.rs  executor.rs  gpu.rs  job_entry.rs  landlock.rs  main.rs  pmi.rs  privdrop.rs  pty.rs  reporter.rs  seccomp.rs
crates/spurdbd/: Cargo.toml
crates/spurdbd/src/: db.rs  fairshare.rs  main.rs  server.rs
crates/spurrestd/: Cargo.toml
crates/spurrestd/src/: main.rs  routes.rs
deploy/: Dockerfile  Dockerfile.manylinux  build-portable.sh
deploy/bare-metal/: cluster_test.sh  deploy.sh  distributed_job.sh  distributed_test.py  inference_test.py  k8s_test.sh
deploy/k8s/: configmap.yaml  operator.yaml  pdb.yaml  rbac.yaml  spurctld.yaml  spurd.yaml  spurdbd.yaml  spurrestd.yaml
deploy/native-host/: cluster_test.sh  gpu_test.hip  inference_job.sh  setup-runner.sh  spur.conf
docs/: getting-started.rst  index.rst  quickstart.md
docs/deployment/: bare-metal.rst  index.rst  kubernetes.rst  managed-kubernetes.rst  native-host.rst  partitioning.rst
docs/developer/: building.rst  contributing.rst  index.rst
docs/getting-started/: index.rst  installation.rst  multi-node.rst  quickstart.rst
docs/getting-started/deployment/: bare-metal.rst  kubernetes.rst
examples/: spur.conf
examples/k8s/: configmap.yaml  spurctld.yaml  spurd.yaml
plans/: implementation-roadmap.md
proto/: raft_internal.proto  slurm.proto
scripts/: check-license-headers.sh
tests/e2e/: README.md  paths.py  pytest.ini
tests/e2e/k8s/: k8s_cluster.py
tests/e2e/native_host/: cluster.py  conftest.py  test_devices.py  test_gpu.py
tests/k8s/e2e/: k8s_cluster.py
tests/native_host/e2e/: cluster.py  conftest.py  test_accounting.py  test_admission.py  test_controller_failover.py  test_preemption.py  test_qos_preemption.py  test_reservations.py  test_single_node.py  test_srun_multi_node.py
(+4 files in other folders)
