[package]
name = "spur-core"
version.workspace = true
edition.workspace = true

[dependencies]
spur-proto = { path = "../spur-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
prost-types = { workspace = true }
