[package]
name = "spur-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
spur-proto = { path = "../spur-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
prost-types = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
subtle = { workspace = true }
whoami = "2"
nix = { workspace = true }

[dev-dependencies]
tempfile = "3"
serial_test = { workspace = true }

[lints]
workspace = true
