[package]
name = "spur-devices"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "CDI-based vendor-agnostic device discovery, caching, and injection for Spur"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
semver = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
nix = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

[lints]
workspace = true
