[package]
name = "spur-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "spur_compat"
crate-type = ["cdylib", "staticlib"]

[dependencies]
spur-proto = { path = "../spur-proto" }
spur-client = { path = "../spur-client" }
spur-core = { path = "../spur-core" }
tokio = { workspace = true }
tonic = { workspace = true }
prost-types = { workspace = true }

[lints]
workspace = true
