[package]
name = "spur-k8s"
version.workspace = true
edition.workspace = true

[[bin]]
name = "spur-k8s-operator"
path = "src/main.rs"

[dependencies]
spur-core = { path = "../spur-core" }
spur-proto = { path = "../spur-proto" }
kube = { workspace = true }
k8s-openapi = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost-types = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
axum = { workspace = true }
hostname = "0.4.2"
tokio-stream = "0.1"
