[package]
name = "spur-state"
version.workspace = true
edition.workspace = true

[dependencies]
spur-core = { path = "../spur-core" }
serde = { workspace = true }
serde_json = { workspace = true }
redb = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
