[package]
name = "spur-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
spur-proto = { path = "../spur-proto" }
spur-core = { path = "../spur-core" }
spur-sched = { path = "../spur-sched" }

spur-spank = { path = "../spur-spank" }
tokio = { workspace = true }
tonic = { workspace = true }
prost-types = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken.workspace = true
