[package]
name = "spur-update"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Auto-update and version checking for Spur binaries"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
semver = "1"
sha2 = "0.10"

[lints]
workspace = true
