[package]
name = "spurctld"
version.workspace = true
edition.workspace = true

[[bin]]
name = "spurctld"
path = "src/main.rs"

[dependencies]
spur-proto = { path = "../spur-proto" }
spur-core = { path = "../spur-core" }
spur-sched = { path = "../spur-sched" }

tokio = { workspace = true }
tonic = { workspace = true }
prost-types = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hostname = "0.4.2"
tokio-stream = "0.1.18"
openraft = { workspace = true }

[dev-dependencies]
tempfile = "3"
