[package]
name = "spurd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "spurd"
path = "src/main.rs"

[dependencies]
spur-proto = { path = "../spur-proto" }
spur-core = { path = "../spur-core" }
spur-net = { path = "../spur-net" }
spur-sched = { path = "../spur-sched" }
spur-spank = { path = "../spur-spank" }
tokio = { workspace = true }
tonic = { workspace = true }
prost-types = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nix = { workspace = true }
libc = "0.2"
hostname = "0.4.2"
tokio-stream = "0.1"
